# milonga

./: .gitignore  AUTHORS  INSTALL.md  Makefile.am  README.md  TODO  autoclean.sh  autogen.sh  configure.ac  get.m4  locateruntest.sh  markdown.sh  sha_wasora
doc/: README.md  generate-lexer.sh  keywords.sh  make.sh  milonga-old.md  milonga.xml  plugin.texi  reference.m4  reference.md  syntax-geany.sh  syntax-kate.sh  syntax-tex.sh  template.html  version.texi
examples/: .gitignore  2dpwr.geo  2dpwr.geo.m4  2dpwr.mil  2dpwr_materials.mil  2dpwr_structured.mil  2dpwr_unstructured.mil  3dshape.mil  bunny-in-a-box.geo  bunny-in-a-box.mil  bunny-in-a-box.msh  bunny.geo  bunny.msh  clean.sh  cube.geo  cube.msh  cylinder-axisymmetric.geo  cylinder.geo  cylinder.msh  eighth-sphere.geo.m4  eighth-sphere.mil  reed.geo  reed.mil  reflected.geo  reflected.mil  runtest.sh  slab-struct.mil  slab-unstruct.mil  slab.geo  slab.mil  slab.msh  sphere.geo  sphere.msh  square.geo  square.mil  square.msh  test-2dpwr.sh  test-3dpwr-struct.sh  test-3dshapes.sh  test-bunny.sh  (+6 more)
src/: allocate.c  boundary.c  debug.c  eigen_slepc.c  entry.c  init.c  linear_petsc.c  milonga.c  milonga.h  parser.c  petschandler.c  times.c  version.c
src/discretizations/: diffusion_elements.c  diffusion_elements.h  diffusion_volumes.c  diffusion_volumes.h  sn.c  sn_elements.c  sn_elements.h  sn_volumes.c  sn_volumes.h
